--- a/src/freenet/l10n/freenet.l10n.hu.properties
+++ b/src/freenet/l10n/freenet.l10n.hu.properties
@@ -1,4 +1,4 @@
-##\\208. sornál tartok
+##\\271. sornál tartok
 testing.test=test$(test1)test$(test2)test
 Announcer.announceAlertIntro=Freenet csatlakozik a hálózathoz - ez eltarthat egy pár percig. A program teljesítménye az elkövetkezendő órákban folyamatosan nőni fog. A program sebessége mindig jelentősen le fog csökkenni, ha pár percnél tovább marad kikapcsolva, ezért kérjük próbálja meg  folyamatosan futtatni (24 órát minden nap), ha lehetséges.
 Announcer.announceAlertTitle=Node bejelentése, hogy elérhesse a többi számítógép
@@ -206,69 +206,69 @@ ConfigToadlet.wrapper=wrapper
 ConfigurablePersister.doesNotExistCannotCreate=Fájl nem létezik és nem hozható létre. (tipikus i/o hiba)
 ConfigurablePersister.existsCannotReadWrite=Fájl létezik de nem olvasható/ írható (jogosultsági hiba)
 ConnectivityToadlet.byIPTitle=Packets for ${ip} by IP address - ${status} (minimum tunnel lifetime ${tunnelLength})
-ConnectivityToadlet.title=Internet connection status
-ConnectivityToadlet.connectivity=Status of your internet connection (port forwarding etc)
-ConnectivityToadlet.connectivityTitle=Internet connection
+ConnectivityToadlet.title=Internet kapcsolat állapota
+ConnectivityToadlet.connectivity=Az internetkapcsolatod állapota (port átirnyítás stb.)
+ConnectivityToadlet.connectivityTitle=Internet kapcsolat
 ConnectivityToadlet.firstSendLeadTime=Startup to first send
 ConnectivityToadlet.firstReceiveLeadTime=Online to first receive
-ConnectivityToadlet.localRemoteTitle=Local/remote
-ConnectivityToadlet.addressTitle=Address
-ConnectivityToadlet.sentReceivedTitle=Sent/received packets
+ConnectivityToadlet.localRemoteTitle=Helyi/távoli
+ConnectivityToadlet.addressTitle=Cím
+ConnectivityToadlet.sentReceivedTitle=Küldött/Fogadott csomagok
 ConnectivityToadlet.byPortTitle=Packets for ${port} by port - ${status} (minimum tunnel lifetime ${tunnelLength})
-ConnectivityToadlet.local=LOCAL
-ConnectivityToadlet.remote=REMOTE
-ConnectivityToadlet.noreply=NO REPLY
-ConnectivityToadlet.summaryTitle=Connectivity
-ConnectivityToadlet.status.DEFINITELY_PORT_FORWARDED=Port forwarded
-ConnectivityToadlet.status.MAYBE_PORT_FORWARDED=Maybe port forwarded
-ConnectivityToadlet.status.MAYBE_NATED=Maybe behind NAT
-ConnectivityToadlet.status.DEFINITELY_NATED=Behind NAT
-ConnectivityToadlet.status.DONT_KNOW=Status unknown
-ConnectionsToadlet.nodeStatus.CONNECTED=CONNECTED
-ConnectionsToadlet.nodeStatus.BACKED_OFF=BACKED OFF
-ConnectionsToadlet.nodeStatus.NO_LOAD_STATS=NO LOAD STATS
-ConnectionsToadlet.nodeStatus.TOO_NEW=TOO NEW
-ConnectionsToadlet.nodeStatus.TOO_OLD=TOO OLD
-ConnectionsToadlet.nodeStatus.DISCONNECTED=DISCONNECTED
-ConnectionsToadlet.nodeStatus.NEVER_CONNECTED=NEVER CONNECTED
-ConnectionsToadlet.nodeStatus.DISABLED=DISABLED
-ConnectionsToadlet.nodeStatus.LISTEN_ONLY=LISTEN ONLY
-ConnectionsToadlet.nodeStatus.LISTENING=LISTENING
+ConnectivityToadlet.local=HELYI
+ConnectivityToadlet.remote=TÁVOLI
+ConnectivityToadlet.noreply=NINCS VÁLASZ
+ConnectivityToadlet.summaryTitle=Kapcsolat
+ConnectivityToadlet.status.DEFINITELY_PORT_FORWARDED=Port átirányított
+ConnectivityToadlet.status.MAYBE_PORT_FORWARDED=a port talán átirányított
+ConnectivityToadlet.status.MAYBE_NATED=Talán NAT-olva vagy
+ConnectivityToadlet.status.DEFINITELY_NATED=Biztos, hogy NAT-olva vagy
+ConnectivityToadlet.status.DONT_KNOW=Állapot ismeretlen
+ConnectionsToadlet.nodeStatus.CONNECTED=KAPCSOLÓDOTT
+ConnectionsToadlet.nodeStatus.BACKED_OFF=TÚLTERHELT
+ConnectionsToadlet.nodeStatus.NO_LOAD_STATS=NINCS ADAT TERHELÉSRŐL
+ConnectionsToadlet.nodeStatus.TOO_NEW=TÚL ÚJ
+ConnectionsToadlet.nodeStatus.TOO_OLD=TÚL RÉGI
+ConnectionsToadlet.nodeStatus.DISCONNECTED=SZÉTKAPCSOLT
+ConnectionsToadlet.nodeStatus.NEVER_CONNECTED=SOSEM KAPCSOLÓDOTT
+ConnectionsToadlet.nodeStatus.DISABLED=KIKAPCSOLT
+ConnectionsToadlet.nodeStatus.LISTEN_ONLY=CSAK FIGYEL
+ConnectionsToadlet.nodeStatus.LISTENING=HALLGATÁS/FIGYELÉS
 ConnectionsToadlet.nodeStatus.BURSTING=BURSTING
-ConnectionsToadlet.nodeStatus.CLOCK_PROBLEM=CLOCK PROBLEM
-ConnectionsToadlet.nodeStatus.CONNECTION_ERROR=CONNECTION ERROR
-ConnectionsToadlet.nodeStatus.DISCONNECTING=DISCONNECTING
-ConnectionsToadlet.nodeStatus.UNKNOWN_STATUS=UNKNOWN STATUS
-ConnectionsToadlet.nodeStatus.BUSY=BUSY
-ConnectionsToadlet.nodeStatus.ROUTING_DISABLED=NOT ROUTING TRAFFIC
-ContentDataFilter.unknownCharset=The page you are about to display has an unknown character set. This means that we are not able to filter the page, and it may compromise your anonymity.
-ContentDataFilter.unknownCharsetTitle=Unknown character set!
-ContentDataFilter.warningUnknownCharsetTitle=Warning: Unknown character set (${charset})
-ContentFilter.applicationPdfReadAdvice=Adobe(R) PDF document - VERY DANGEROUS!
-ContentFilter.applicationPdfWriteAdvice=Adobe(R) PDF document - VERY DANGEROUS!
-ContentFilter.audioMP3ReadAdvice=MP3 music/audio file - probably not dangerous but can contain metadata which might include URLs of unencrypted content; the filter will strip these out
-ContentFilter.audioMP3WriteAdvice=MP3 music/audio file - probably not dangerous but can contain metadata which might include URLs of unencrypted content; the filter will strip these out
-ContentFilter.EOFMessage=Unexpected end of file
-ContentFilter.EOFDescription=The filter needed more data from the file you were accessing than was available. The file may be malformed or corrupted.
-ContentFilter.imageBMPReadAdvice=BMP image - probably not dangerous
-ContentFilter.imageBMPWriteAdvice=BMP image - probably not dangerous
-ContentFilter.imageGifReadAdvice=GIF image - probably not dangerous
-ContentFilter.imageGifWriteAdvice=GIF image - probably not dangerous but you should wipe any comments
-ContentFilter.imageIcoReadAdvice=Icon file - probably not dangerous
-ContentFilter.imageIcoWriteAdvice=Icon file - probably not dangerous (but can contain other data due to offset?)
-ContentFilter.imageJpegReadAdvice=JPEG image - probably not dangerous
-ContentFilter.imageJpegWriteAdvice=JPEG image - probably not dangerous but can contain EXIF data
-ContentFilter.imagePngReadAdvice=PNG image - probably not dangerous
-ContentFilter.imagePngWriteAdvice=PNG image - probably not dangerous but you should wipe any comments or text blocks
-ContentFilter.textCssReadAdvice=CSS (cascading style sheet, usually used with HTML) - probably not dangerous if filtered, but the filter is not a whitelist filter so take care
-ContentFilter.textCssWriteAdvice=CSS (cascading style sheet, usually used with HTML) - this can probably contain metadata, check it by hand
-ContentFilter.textHtmlReadAdvice=HTML - not dangerous if filtered
-ContentFilter.textHtmlWriteAdvice=HTML - may contain dangerous metadata etc; suggest you check it by hand
+ConnectionsToadlet.nodeStatus.CLOCK_PROBLEM=ÓRA PROBLÉMA
+ConnectionsToadlet.nodeStatus.CONNECTION_ERROR=CSATLAKOZÁSI HIBA
+ConnectionsToadlet.nodeStatus.DISCONNECTING=LECSATLAKOZÁS
+ConnectionsToadlet.nodeStatus.UNKNOWN_STATUS=ISMERETLEN ÁLLAPOT
+ConnectionsToadlet.nodeStatus.BUSY=ELFOGLALT
+ConnectionsToadlet.nodeStatus.ROUTING_DISABLED=NEM TOVÁBBÍT FORGALMAT
+ContentDataFilter.unknownCharset=Az oldal amit meg akartál nyitni ismeretlen karakterkódolást használ. Ez azt jelenti, hogy nem tudjuk szűrni a honlapot, és ez veszélyezteti az anonimitásodat.
+ContentDataFilter.unknownCharsetTitle=Ismeretlen karakterkódolás!
+ContentDataFilter.warningUnknownCharsetTitle=FIGYELMEZTETÉS: Ismeretlen karakterkódolás: (${charset})
+ContentFilter.applicationPdfReadAdvice=Adobe(R) PDF document - NAGYON VESZÉLYES!
+ContentFilter.applicationPdfWriteAdvice=Adobe(R) PDF document - NAGYON VESZÉLYES!
+ContentFilter.audioMP3ReadAdvice=MP3 music/audio file - valószínűleg nem veszélyes, de tartalmazhat olyan adatokat, beleértve hivatkozásokat is, amelyek nem titkosított tartalomra mutatnak.; the filter will strip these out
+ContentFilter.audioMP3WriteAdvice=MP3 music/audio file - valószínűleg nem veszélyes, de tartalmazhat olyan adatokat, beleértve hivatkozásokat is, amelyek nem titkosított tartalomra mutatnak; the filter will strip these out
+ContentFilter.EOFMessage=Nem várt véget ért a fájl (hibás a fájl, vagy megszakadt az átvitel)
+ContentFilter.EOFDescription=A filternek több adatra van szüksége, mint amennyi jelenleg a rendelkezésére áll. A fájl valószínűleg érvénytelen formátumú, vagy sérült.
+ContentFilter.imageBMPReadAdvice=BMP image - Valószínűleg nem veszélyes
+ContentFilter.imageBMPWriteAdvice=BMP image - Valószínűleg nem veszélyes
+ContentFilter.imageGifReadAdvice=GIF image - Valószínűleg nem veszélyes
+ContentFilter.imageGifWriteAdvice=GIF image - Valószínűleg nem veszélyes, de utána ne reklamálj
+ContentFilter.imageIcoReadAdvice=Icon file - Valószínűleg nem veszélyes
+ContentFilter.imageIcoWriteAdvice=Icon file - Valószínűleg nem veszélyes (de más fájlokra is tartalmazhat adatokat)
+ContentFilter.imageJpegReadAdvice=JPEG image - Valószínűleg nem veszélyes
+ContentFilter.imageJpegWriteAdvice=JPEG image - Valószínűleg nem veszélyes de tartalmazhat EXIF adatot.
+ContentFilter.imagePngReadAdvice=PNG image - Valószínűleg nem veszélyes
+ContentFilter.imagePngWriteAdvice=PNG image - Valószínűleg nem veszélyes, de töröld ki a kommenteket. 
+ContentFilter.textCssReadAdvice=CSS (cascading style sheet, usually used with HTML) - Valószínűleg nem veszélyes
+ContentFilter.textCssWriteAdvice=CSS (cascading style sheet, usually used with HTML) -Ez valószínűleg meta-adatokat tartalmaz, ezt ellenőrizd kézzel.
+ContentFilter.textHtmlReadAdvice=HTML - Nem veszélyes
+ContentFilter.textHtmlWriteAdvice=HTML - Talán veszélyes meta-adatokat tartalmazhat, kézzel ajánlott ellenőrizni.; suggest you check it by hand
 ContentFilter.textPlainReadAdvice=Plain text - not dangerous unless your browser is stupid (e.g. Internet Explorer)
 ContentFilter.textPlainWriteAdvice=Plain text - not dangerous unless you include compromising information
-ContentFilterToadlet.displayResultLabel=Display the result in the browser
-ContentFilterToadlet.errorBadRequest=The request was invalid.
-ContentFilterToadlet.errorBadRequestTitle=Bad request
+ContentFilterToadlet.displayResultLabel=Mutasd az eredményt a böngészőben.
+ContentFilterToadlet.errorBadRequest=A kérés érvénytelen volt.
+ContentFilterToadlet.errorBadRequestTitle=Rossz lekérdezés
 ContentFilterToadlet.errorMustSpecifyFilterOperation=Use READ to apply the read filter. Use WRITE to apply the write filter. Use BOTH to apply them both.
 ContentFilterToadlet.errorMustSpecifyFilterOperationTitle=You must specify what sort of filtering to apply when filtering a file!
 ContentFilterToadlet.errorMustSpecifyResultHandling=Use DISPLAY to view the output in the browser. Use SAVE to download the output to a file.
