--- a/src/freenet/l10n/freenet.l10n.hu.properties
+++ b/src/freenet/l10n/freenet.l10n.hu.properties
@@ -1,4 +1,4 @@
-##\\271. sornál tartok
+##\\296. sornál tartok
 testing.test=test$(test1)test$(test2)test
 Announcer.announceAlertIntro=Freenet csatlakozik a hálózathoz - ez eltarthat egy pár percig. A program teljesítménye az elkövetkezendő órákban folyamatosan nőni fog. A program sebessége mindig jelentősen le fog csökkenni, ha pár percnél tovább marad kikapcsolva, ezért kérjük próbálja meg  folyamatosan futtatni (24 órát minden nap), ha lehetséges.
 Announcer.announceAlertTitle=Node bejelentése, hogy elérhesse a többi számítógép
@@ -269,30 +269,30 @@ ContentFilter.textPlainWriteAdvice=Plain text - not dangerous unless you include
 ContentFilterToadlet.displayResultLabel=Mutasd az eredményt a böngészőben.
 ContentFilterToadlet.errorBadRequest=A kérés érvénytelen volt.
 ContentFilterToadlet.errorBadRequestTitle=Rossz lekérdezés
-ContentFilterToadlet.errorMustSpecifyFilterOperation=Use READ to apply the read filter. Use WRITE to apply the write filter. Use BOTH to apply them both.
-ContentFilterToadlet.errorMustSpecifyFilterOperationTitle=You must specify what sort of filtering to apply when filtering a file!
-ContentFilterToadlet.errorMustSpecifyResultHandling=Use DISPLAY to view the output in the browser. Use SAVE to download the output to a file.
-ContentFilterToadlet.errorMustSpecifyResultHandlingTitle=You must specify what to do with the result when filtering a file!
-ContentFilterToadlet.errorNoFileOrCannotRead=Freenet cannot read the file "${file}".
-ContentFilterToadlet.errorNoFileOrCannotReadTitle=The file does not exist or it cannot be read
-ContentFilterToadlet.errorNoFileSelected=You did not select a file to filter.
-ContentFilterToadlet.errorNoFileSelectedTitle=No file selected
-ContentFilterToadlet.errorUnsafeContent=The content filter has determined that the file is unsafe to display.
-ContentFilterToadlet.errorUnsafeContentTitle=Unsafe content
-ContentFilterToadlet.filterFile=Test the content filter on a file
-ContentFilterToadlet.filterFileBrowseButton=Browse files
-ContentFilterToadlet.filterFileBrowseLabel=Filter a file from disk
-ContentFilterToadlet.filterFileFilterLabel=Filter File
-ContentFilterToadlet.filterFileUploadLabel=Or filter a file through the browser
-ContentFilterToadlet.mimeTypeLabel=Treat the file as this MIME type
-ContentFilterToadlet.mimeTypeText=Leave this blank to let Freenet auto-detect the MIME type.
-ContentFilterToadlet.pageTitle=Test the Content Filter
-ContentFilterToadlet.saveResultLabel=Save the result to disk
-ContentFilterToadlet.selectFile=Filter
-ContentFilterToadlet.tryAgainFilterFilePage=${link}Try again${/link} to filter a file.
-DarknetAddRefToadlet.title=Connect to a Friend
-DarknetAddRefToadlet.explainBoxTitle=Why you should connect to your friends running Freenet
-DarknetAddRefToadlet.explainBox1=You can improve Freenet's security by connecting to your friends. That is, to people you actually know who also run Freenet. These can be online acquaintances, but do not add connections to total strangers, as adding strangers as Friends will not improve security much and will cause problems for the network as a whole if lots of people do it. When you have added enough Friends, so that at least 5 are online at all times, you can increase your network security level to HIGH, and only connect to Friends, which is called "darknet mode". This makes it much harder for an attacker to even find out that you are running Freenet, and makes most attacks against your anonymity much harder. Freenet will make encrypted connections to your friends directly over the Internet, so only add people you can already be easily connected to (family, coworkers, real life friends, online friends).
+ContentFilterToadlet.errorMustSpecifyFilterOperation=Használd a READ gombot?!, hogy elfogadd a filtert az olvasáshoz. Használd a WRITE, hogy elfogadd a szűrőt az íráshoz. Használd mindkettőt, ha mindkettőhöz akarsz szűrőt.
+ContentFilterToadlet.errorMustSpecifyFilterOperationTitle=Meg kell határoznod, hogy milyen típusú fájlokat akarsz szűrni, illetve átengedni a szűrőn.
+ContentFilterToadlet.errorMustSpecifyResultHandling=Használd a DISPLAY-t, hogy megnézd a kimenetet a böngésződben. Használd a SAVE-t, hogy a kimenetet letöltsd egy fájlba.
+ContentFilterToadlet.errorMustSpecifyResultHandlingTitle=Meg kell határoznod, mit csináljon a végeredménnyel ha szűröd a fájlt!
+ContentFilterToadlet.errorNoFileOrCannotRead=Freenet nem tudja olvasni a fájlt "${file}". (valszeg jogosultsági hiba)
+ContentFilterToadlet.errorNoFileOrCannotReadTitle=A fájl nem létezik, vagy olvashatatlan.
+ContentFilterToadlet.errorNoFileSelected=Nem választottál ki fájlt a szűréshez.
+ContentFilterToadlet.errorNoFileSelectedTitle=Nincs fájl kiválasztva
+ContentFilterToadlet.errorUnsafeContent=A tartalomszűrő úgy látja/érzékeli, hogy a fájlt nem biztonságos megjeleníteni!
+ContentFilterToadlet.errorUnsafeContentTitle=VESZÉLYES TARTALOM!
+ContentFilterToadlet.filterFile=Futtasd a tartalom-szűrőt a fájlon!
+ContentFilterToadlet.filterFileBrowseButton=Fájlok tallózása
+ContentFilterToadlet.filterFileBrowseLabel=Ellenőrizd/szűrd a fájlt merevlemezről.
+ContentFilterToadlet.filterFileFilterLabel=Fájl ellenőrzése. 
+ContentFilterToadlet.filterFileUploadLabel=Vagy ellenőrizd a fájlt böngészőn keresztül
+ContentFilterToadlet.mimeTypeLabel=Kezeld a fájlokat a MIME típusuk szerint
+ContentFilterToadlet.mimeTypeText=Hagyd ezt üresen, ha azt akarod, hogy a Freenet határozza meg a MIME típust.
+ContentFilterToadlet.pageTitle=Futtasd a tartalomszűrőt/ellenőrzőt
+ContentFilterToadlet.saveResultLabel=Mentsd az eredményt lemezre
+ContentFilterToadlet.selectFile=Szűrő/Ellenőrző
+ContentFilterToadlet.tryAgainFilterFilePage=${link}Próbáld újra${/link} , hogy ellenőrizze a fájlt.
+DarknetAddRefToadlet.title=Csatlakozás a barátodhoz
+DarknetAddRefToadlet.explainBoxTitle=Miért csatlakozzál a barátaidhoz, akik szintén a Freenet-et futtatják?
+DarknetAddRefToadlet.explainBox1=Te megnovelheted a Freenet biztonságát, ha a barátaidhoz kapcsolódsz, akikről tudod, hogy a Freenet-et futtatják. Ezek lehetnek online ismerősök is, de semmiképpen se adj hozzá teljesen vadidegen embereket. Mert így nem növeled a biztonságot, hanem még csökkented is. Ha elég barátot adtál hozzá, tehát legalább 5 barátod van bármikor online, akkor nyugodtan megemelheted a biztonsági szintedet HIGH-re (azaz magasra), így csak ezekhez az ismerőseidhez (a felvett barátaidhoz) fogsz csatlakozni. Nem fogsz kapcsolódni egyáltalán idegen emberekhez. Ezt hívjuk DARKNET MODE-nak (Sötét/rejtett hálózatnak). Ez a mód még nehezebbé teszi a támadóknak, hogy rájöjjenek egyáltalán futtatod-e a Freenet szoftvert, és úgy általában minden támadást az anonimitásod ellen nehezebbé tesz. Hiszen a barátaidon keresztül zajlik a forgalom, csak és kizárólag rajtuk keresztül, ráadásul titkosítva. Ezért lehetőleg csak a közvetlen ismerősökhöz csatlakozz: család, barátok, munkatársak és csak olyan emberek akikben teljesen megbízol. Fordítói mj.: Ha az ismerőseiddel barátaiddal pletykálkodsz, akkor azok elnézőek lesznek veled, megértőek, és segítenek neked, hogy kielégítsék a kíváncsiságodat. De ha bekötött szemmel odamész egy vadidegenhez, aki még skinehead is és közlöd vele, hogy te utálod őket, akkor lehet, hogy pofán fog csapni.  
 DarknetAddRefToadlet.explainInstallerWindows=You can find the latest Windows installer in ${filename} or click ${get-windows}here${/get-windows}.
 DarknetAddRefToadlet.explainInstallerWindowsNotYet=Freenet has not yet managed to download the Windows installer, however you can get it over Freenet ${link}here${/link}.
 DarknetAddRefToadlet.explainInstallerNonWindows=You can find the latest non-Windows installer in ${filename} or click ${get-nonwindows}here${/get-nonwindows}. This is a jar file which must be opened with java; hopefully your friend can double click on it, but if that doesn't work try opening a command line and typing "java -jar ${shortfilename}".
