--- a/src/freenet/l10n/freenet.l10n.hu.properties
+++ b/src/freenet/l10n/freenet.l10n.hu.properties
@@ -1,4 +1,4 @@
-##\\296. sornál tartok
+##\\334. sornál tartok
 testing.test=test$(test1)test$(test2)test
 Announcer.announceAlertIntro=Freenet csatlakozik a hálózathoz - ez eltarthat egy pár percig. A program teljesítménye az elkövetkezendő órákban folyamatosan nőni fog. A program sebessége mindig jelentősen le fog csökkenni, ha pár percnél tovább marad kikapcsolva, ezért kérjük próbálja meg  folyamatosan futtatni (24 órát minden nap), ha lehetséges.
 Announcer.announceAlertTitle=Node bejelentése, hogy elérhesse a többi számítógép
@@ -293,45 +293,45 @@ ContentFilterToadlet.tryAgainFilterFilePage=${link}Próbáld újra${/link} , hog
 DarknetAddRefToadlet.title=Csatlakozás a barátodhoz
 DarknetAddRefToadlet.explainBoxTitle=Miért csatlakozzál a barátaidhoz, akik szintén a Freenet-et futtatják?
 DarknetAddRefToadlet.explainBox1=Te megnovelheted a Freenet biztonságát, ha a barátaidhoz kapcsolódsz, akikről tudod, hogy a Freenet-et futtatják. Ezek lehetnek online ismerősök is, de semmiképpen se adj hozzá teljesen vadidegen embereket. Mert így nem növeled a biztonságot, hanem még csökkented is. Ha elég barátot adtál hozzá, tehát legalább 5 barátod van bármikor online, akkor nyugodtan megemelheted a biztonsági szintedet HIGH-re (azaz magasra), így csak ezekhez az ismerőseidhez (a felvett barátaidhoz) fogsz csatlakozni. Nem fogsz kapcsolódni egyáltalán idegen emberekhez. Ezt hívjuk DARKNET MODE-nak (Sötét/rejtett hálózatnak). Ez a mód még nehezebbé teszi a támadóknak, hogy rájöjjenek egyáltalán futtatod-e a Freenet szoftvert, és úgy általában minden támadást az anonimitásod ellen nehezebbé tesz. Hiszen a barátaidon keresztül zajlik a forgalom, csak és kizárólag rajtuk keresztül, ráadásul titkosítva. Ezért lehetőleg csak a közvetlen ismerősökhöz csatlakozz: család, barátok, munkatársak és csak olyan emberek akikben teljesen megbízol. Fordítói mj.: Ha az ismerőseiddel barátaiddal pletykálkodsz, akkor azok elnézőek lesznek veled, megértőek, és segítenek neked, hogy kielégítsék a kíváncsiságodat. De ha bekötött szemmel odamész egy vadidegenhez, aki még skinehead is és közlöd vele, hogy te utálod őket, akkor lehet, hogy pofán fog csapni.  
-DarknetAddRefToadlet.explainInstallerWindows=You can find the latest Windows installer in ${filename} or click ${get-windows}here${/get-windows}.
-DarknetAddRefToadlet.explainInstallerWindowsNotYet=Freenet has not yet managed to download the Windows installer, however you can get it over Freenet ${link}here${/link}.
-DarknetAddRefToadlet.explainInstallerNonWindows=You can find the latest non-Windows installer in ${filename} or click ${get-nonwindows}here${/get-nonwindows}. This is a jar file which must be opened with java; hopefully your friend can double click on it, but if that doesn't work try opening a command line and typing "java -jar ${shortfilename}".
+DarknetAddRefToadlet.explainInstallerWindows=Te megtalálod a legfrissebb verziójú windows installert itt ${filename} vagy ${get-windows}kattints ide!${/get-windows}.
+DarknetAddRefToadlet.explainInstallerWindowsNotYet=Freenet -tel még nem töltötted le a Windows Installert, de ha szeretnéd, akkor használd ${link}ezt a linket${/link}.
+DarknetAddRefToadlet.explainInstallerNonWindows=Te megtalálod a legfrissebb verziójú nem-windows installert itt${filename} vagy ${get-nonwindows}kattints ide${/get-nonwindows}. Ez egy jar fájl, ehhez szükséged van java-ra, hogy megnyithasd; hopefully your friend can double click on it, but if that doesn't work try opening a command line and typing "java -jar ${shortfilename}".
 DarknetAddRefToadlet.explainInstallerNonWindowsNotYet=Freenet has not yet managed to download the non-Windows installer, however you can get it over Freenet ${link}here${/link}. This is a jar file which must be opened with java; hopefully your friend can double click on it, but if that doesn't work try opening a command line and typing "java -jar ${shortfilename}".
-DarknetAddRefToadlet.explainBox2=In order to connect to a Friend, you need to exchange noderefs with them. A noderef is a small file which contains the information needed for their copy of Freenet ("Freenet node") to connect to yours. You must add their noderef and they must add your noderef, for the two nodes to connect. See below for your noderef.
-DarknetConnectionsToadlet.addAnotherFriend=Add another Friend
-DarknetConnectionsToadlet.goFriendConnectionStatus=Go to the Friends page to see whether this friend connects
-DarknetConnectionsToadlet.activityTitle=Current Activity
-DarknetConnectionsToadlet.add=Add
-DarknetConnectionsToadlet.addPeerTitle=Connect to a Friend
-DarknetConnectionsToadlet.addOpennetPeerTitle=Manually connect to a Stranger (not recommended!)
-DarknetConnectionsToadlet.alreadyInReferences=We already have the given reference.
-DarknetConnectionsToadlet.backedOff=Connected but backed off: These peers are connected but we're backed off from them, so Freenet is not routing requests to them.
-DarknetConnectionsToadlet.backedOffShort=Backed off
-DarknetConnectionsToadlet.bracketedMoreDetailed=(more detailed)
-DarknetConnectionsToadlet.bursting=Not connected and bursting: this node is, for a short period, trying to connect to these peers because the user has set BurstOnly on them.
-DarknetConnectionsToadlet.burstingShort=Bursting
-DarknetConnectionsToadlet.busy=Busy: These peers are connected but they are too busy to serve our requests, so Freenet is not routing requests to them.
-DarknetConnectionsToadlet.busyShort=Busy
-DarknetConnectionsToadlet.cantFetchNoderefURL=Unable to retrieve node reference from ${url}. Please try again.
-DarknetConnectionsToadlet.cantParseTryAgain=Unable to parse the given text as a node reference: (${error}). Please try again.
-DarknetConnectionsToadlet.cantParseWrongEnding=Unable to parse the node reference: It should end with End on a line by itself, but it ends with: ${end}
-DarknetConnectionsToadlet.changeMyName=Change
-DarknetConnectionsToadlet.changeTrustButton=Change trust to
-DarknetConnectionsToadlet.changeVisibilityButton=Change visibility to
-DarknetConnectionsToadlet.clockProblem=Your clock and the node's clock differ by more than 24 hours. We have disabled the connection as this may cause problems with updating and clients.
-DarknetConnectionsToadlet.clockProblemShort=Clock Problem
-DarknetConnectionsToadlet.confirmRemoveNode=Are you sure you wish to remove "${name}"? Before it has at least one week downtime, it's not recommended to do so, as it may be down only temporarily, and many users cannot run their nodes 24x7.
-DarknetConnectionsToadlet.confirmRemoveNodeTitle=Please confirm
-DarknetConnectionsToadlet.confirmRemoveNodeWarningTitle=Node Removal
-DarknetConnectionsToadlet.connected=Connected: We're successfully connected to these nodes
-DarknetConnectionsToadlet.connectedShort=Connected
-DarknetConnectionsToadlet.countTitle=Count
-DarknetConnectionsToadlet.darknetFnpPort=Darknet FNP: ${port}/UDP (used to connect to trusted peers i.e. Friends; forward this port if you can)
-DarknetConnectionsToadlet.disabled=Not connected and disabled: because you have instructed Freenet not to connect to these peers.
-DarknetConnectionsToadlet.disabledShort=Disabled
-DarknetConnectionsToadlet.enterDescription=Enter description:
+DarknetAddRefToadlet.explainBox2=Ahhoz, hogy csatlakozhass a barátodhoz, ki kell cserélnetek egymással a noderef-fájlt. A noderef egy kis méretű fájl, ami tartalmazza a szükséges információkat, hogy csatlakozhass a barátod klienséhez, és/vagy ő hozzád. Mind kettőtöknek hozzá kell adni egymás noderef-fájlját, hogy tudjatok egymáshoz csatlakozni, és elfogadhassátok egymás csatlakozási kérelmét. Nézd meg lent a noderef fájlodat.
+DarknetConnectionsToadlet.addAnotherFriend=Másik barát hozzáadása
+DarknetConnectionsToadlet.goFriendConnectionStatus=Menj a barátok oldalra, hogy lásd, mely barátaidhoz kapcsolódsz.
+DarknetConnectionsToadlet.activityTitle=Jelenlegi aktivitás
+DarknetConnectionsToadlet.add=Hozzáadás
+DarknetConnectionsToadlet.addPeerTitle=Kapcsolódás a baráthoz
+DarknetConnectionsToadlet.addOpennetPeerTitle=Kézzel kapcsolódni idegenekhez. (Nem ajánlott, rosszindulatú támadás kezdeményezhető!)
+DarknetConnectionsToadlet.alreadyInReferences=Nekünk már megvan a szükség viszonyítási pont (noderef fájl?!)
+DarknetConnectionsToadlet.backedOff=kapcsolódott, de túlterhelt: Ezekhez a peer-ekhez kapcsolódva vagy, de úgy néz ki túl vannak terhelve, így a freenet kliensed jelenleg nem továbbít felé forgalmat. (Addig amíg a terhelése nem csökken)
+DarknetConnectionsToadlet.backedOffShort=Túlterhelt
+DarknetConnectionsToadlet.bracketedMoreDetailed=(Még részletesebben)
+DarknetConnectionsToadlet.bursting=Nem kapcsolódott, de erőlteti: A kliensed egy rövid ideig megpróbált kapcsolódni egy másikhoz, eddig nem sikerült, de próbálkozik tovább, mert be van állítva a BurstOnly.
+DarknetConnectionsToadlet.burstingShort=Erőltetés (BurstOnly)
+DarknetConnectionsToadlet.busy=Elfoglalt: Ehhez a klienshez kapcsolódva vagy, de jelenleg túl elfoglat, hogy kéréseket tudjon teljesíteni, így Freenet jelenleg nem küld felé kéréseket.
+DarknetConnectionsToadlet.busyShort=Elfoglalt
+DarknetConnectionsToadlet.cantFetchNoderefURL=Nem lehet visszafejteni a node referenciákat innen: ${url}. Kérjük próbáld újra.
+DarknetConnectionsToadlet.cantParseTryAgain=Nem lehet értelmezni a megadott szöveget, mint node reference: (${error}). Kérlek próbáld újra. (Rosszul illesztetted be, vagy hiányosan, vagy rossz a szövegrészlet)
+DarknetConnectionsToadlet.cantParseWrongEnding=Nem lehet értelmezni a node reference-t: End szövegnek kéne lennie az utolsó sorban, de ezt tartalmazza: ${end}
+DarknetConnectionsToadlet.changeMyName=Módosítás
+DarknetConnectionsToadlet.changeTrustButton=Bizalmi szint módosítása erre
+DarknetConnectionsToadlet.changeVisibilityButton=Láthatóság módosítása erre
+DarknetConnectionsToadlet.clockProblem=A te órád a célkliens órája több, mint 24 órával eltér. Ezért a kliensed nem kapcsolódik, mert ez problémákat okozhat a frissítésekkel és a klienssel.
+DarknetConnectionsToadlet.clockProblemShort=Hibás órabeállítások
+DarknetConnectionsToadlet.confirmRemoveNode=Biztos vagy benne, hogy törölni akarod: "${name}"? Amíg kevesebb, mint egy hete volt az utolsó kapcsolatteremtés, addig nem ajánlott, mert elképzelhető, hogy csak időlegesen nem tudtok egymáshoz kapcsolódni és sok felhasználó nem futtatja a gépét éjjel-nappal.
+DarknetConnectionsToadlet.confirmRemoveNodeTitle=Kérlek erősítsd meg
+DarknetConnectionsToadlet.confirmRemoveNodeWarningTitle=Kapcsolat törlése.
+DarknetConnectionsToadlet.connected=Kapcsolódott: Mi sikeresen kapcsolódtunk ezekhez a freenet-kliensekhez.
+DarknetConnectionsToadlet.connectedShort=Kapcsolódott.
+DarknetConnectionsToadlet.countTitle=darab
+DarknetConnectionsToadlet.darknetFnpPort=Darknet FNP: ${port}/UDP (Ezt a portod használjuk, a megbízható kapcsolatokhoz, például barátok); irányítsd át ezt a portot, ha tudod.
+DarknetConnectionsToadlet.disabled=Nem kapcsolódott és kikapcsolt: Mert azt mondtad a Freenet-kliensnek, hogy ne kapcsolódjon hozzájuk.
+DarknetConnectionsToadlet.disabledShort=Kikapcsolt
+DarknetConnectionsToadlet.enterDescription=Leírás megadása:
 DarknetConnectionsToadlet.foafReachableThroughTitle=Reachable Through
-DarknetConnectionsToadlet.connError=Connection failed (buggy node?)
+DarknetConnectionsToadlet.connError=Sikertelen kapcsolódás (hibás a node?)
 DarknetConnectionsToadlet.routingDisabled=Not routing traffic (we are currently connected to the node but we or it refuse to route traffic)
 DarknetConnectionsToadlet.routingDisabledShort=Not routing traffic
 DarknetConnectionsToadlet.noLoadStats=Don't know how many requests we can send so can't send any
