--- a/src/freenet/l10n/freenet.l10n.hu.properties
+++ b/src/freenet/l10n/freenet.l10n.hu.properties
@@ -1,4 +1,4 @@
-##\\334. sornál tartok
+##\\356. sornál tartok
 testing.test=test$(test1)test$(test2)test
 Announcer.announceAlertIntro=Freenet csatlakozik a hálózathoz - ez eltarthat egy pár percig. A program teljesítménye az elkövetkezendő órákban folyamatosan nőni fog. A program sebessége mindig jelentősen le fog csökkenni, ha pár percnél tovább marad kikapcsolva, ezért kérjük próbálja meg  folyamatosan futtatni (24 órát minden nap), ha lehetséges.
 Announcer.announceAlertTitle=Node bejelentése, hogy elérhesse a többi számítógép
@@ -332,28 +332,28 @@ DarknetConnectionsToadlet.disabledShort=Kikapcsolt
 DarknetConnectionsToadlet.enterDescription=Leírás megadása:
 DarknetConnectionsToadlet.foafReachableThroughTitle=Reachable Through
 DarknetConnectionsToadlet.connError=Sikertelen kapcsolódás (hibás a node?)
-DarknetConnectionsToadlet.routingDisabled=Not routing traffic (we are currently connected to the node but we or it refuse to route traffic)
-DarknetConnectionsToadlet.routingDisabledShort=Not routing traffic
-DarknetConnectionsToadlet.noLoadStats=Don't know how many requests we can send so can't send any
-DarknetConnectionsToadlet.noLoadStatsShort=No load stats
-DarknetConnectionsToadlet.myName=Nickname for this node: ${name}
-DarknetConnectionsToadlet.disconnectingShort=Disconnecting
-DarknetConnectionsToadlet.disconnecting=Disconnecting (we are currently removing the node, we need to tell it to go away and this can take a short time)
-DarknetConnectionsToadlet.connErrorShort=Connection Error
-DarknetConnectionsToadlet.failedToAddNodeInternalError=Unable to parse the given text as a node reference. Please report the following to the developers:
-DarknetConnectionsToadlet.failedToAddNodeInternalErrorTitle=Failed to Add Node: Internal Error
-DarknetConnectionsToadlet.failedToAddNodeTitle=Failed To Add Node
+DarknetConnectionsToadlet.routingDisabled=Nem továbbítunk kérést (Mi jelnleg kapcsolódunk ezekhez a peerekhez, de mi vagy ők nem továbbítanak felénk kéréseket)
+DarknetConnectionsToadlet.routingDisabledShort=Nem továbbítunk kéréseket
+DarknetConnectionsToadlet.noLoadStats=Nincs róla adat, hogy a célkliens mennyire terhelt, ezért nem küldünk semmit. (Feltételezzük, hogy ahhoz is elfoglalt, hogy ezt megküldje)
+DarknetConnectionsToadlet.noLoadStatsShort=Nincs terhelési statisztika
+DarknetConnectionsToadlet.myName=Becenév a cél-klienshez: ${name}
+DarknetConnectionsToadlet.disconnectingShort=Lecsatlakozás
+DarknetConnectionsToadlet.disconnecting=Lecsatlakozás (Mi jelenleg nem csatlakozunk a node-hoz, talán nincs bekapcsolva, ezért eltarthat egy ideig.)
+DarknetConnectionsToadlet.connErrorShort=Hiba a kapcsolatban
+DarknetConnectionsToadlet.failedToAddNodeInternalError=A megadott szöveget nem lehet értelmezni, mint node-reference. Kérjük a következőket jelentsd a fejlesztőknek:
+DarknetConnectionsToadlet.failedToAddNodeInternalErrorTitle=Barát hozzáadása sikertelen: Belső hiba
+DarknetConnectionsToadlet.failedToAddNodeTitle=Hiba a node hozzáadásakor.
 DarknetConnectionsToadlet.fcpDisabled=FCP is disabled (for Freenet clients such as Frost and Thaw)
 DarknetConnectionsToadlet.fcpPort=FCP: ${port}/TCP (for Freenet clients such as Frost and Thaw)
-DarknetConnectionsToadlet.fileReference=OR browse for the node reference file here:
-DarknetConnectionsToadlet.forceRemove=Force Remove
+DarknetConnectionsToadlet.fileReference=Vagy tallózd be a node referenc fájlt itt:
+DarknetConnectionsToadlet.forceRemove=Kényszerített törlés
 DarknetConnectionsToadlet.fproxyDisabled=FProxy is disabled (this web interface)
 DarknetConnectionsToadlet.fproxyPort=FProxy: ${port}/TCP (this web interface)
-DarknetConnectionsToadlet.fullTitle=${counts} Friends (Trusted Peers)
+DarknetConnectionsToadlet.fullTitle=${counts} Barát (Megbízható kapcsolatok)
 DarknetConnectionsToadlet.go=Go
-DarknetConnectionsToadlet.idleTime=How long since the node connected or was last seen
-DarknetConnectionsToadlet.idleTimeTitle=Connected / Idle
-DarknetConnectionsToadlet.invalidSignature=Unable to verify the signature of the given reference (${error}).
+DarknetConnectionsToadlet.idleTime=Ha aktív a kapcsolat, akkor mennyi ideje az, ha nem, akkor mennyi ideje inaktív.
+DarknetConnectionsToadlet.idleTimeTitle=Kapcsolódott / Tétlen
+DarknetConnectionsToadlet.invalidSignature=Nem sikerült hitelesíteni az aláírást, hibás, vagy hamis: (${error}).
 DarknetConnectionsToadlet.ipAddress=The node's network address as IP:Port
 DarknetConnectionsToadlet.ipAddressTitle=Address
 DarknetConnectionsToadlet.listenOnly=Not connected and listen only: this node won't try to connect to these peers at all because the user has set ListenOnly on it.
