--- a/src/freenet/l10n/freenet.l10n.hu.properties
+++ b/src/freenet/l10n/freenet.l10n.hu.properties
@@ -1,4 +1,4 @@
-##\\356. sornál tartok
+##\\362. sornál tartok
 testing.test=test$(test1)test$(test2)test
 Announcer.announceAlertIntro=Freenet csatlakozik a hálózathoz - ez eltarthat egy pár percig. A program teljesítménye az elkövetkezendő órákban folyamatosan nőni fog. A program sebessége mindig jelentősen le fog csökkenni, ha pár percnél tovább marad kikapcsolva, ezért kérjük próbálja meg  folyamatosan futtatni (24 órát minden nap), ha lehetséges.
 Announcer.announceAlertTitle=Node bejelentése, hogy elérhesse a többi számítógép
@@ -354,11 +354,11 @@ DarknetConnectionsToadlet.go=Go
 DarknetConnectionsToadlet.idleTime=Ha aktív a kapcsolat, akkor mennyi ideje az, ha nem, akkor mennyi ideje inaktív.
 DarknetConnectionsToadlet.idleTimeTitle=Kapcsolódott / Tétlen
 DarknetConnectionsToadlet.invalidSignature=Nem sikerült hitelesíteni az aláírást, hibás, vagy hamis: (${error}).
-DarknetConnectionsToadlet.ipAddress=The node's network address as IP:Port
-DarknetConnectionsToadlet.ipAddressTitle=Address
-DarknetConnectionsToadlet.listenOnly=Not connected and listen only: this node won't try to connect to these peers at all because the user has set ListenOnly on it.
-DarknetConnectionsToadlet.listenOnlyShort=Listen only
-DarknetConnectionsToadlet.listening=Not connected but listening: this node won't try to connect to these peers very often because the user has set BurstOnly on it.
+DarknetConnectionsToadlet.ipAddress=A node internet címe és portja: IP:Port
+DarknetConnectionsToadlet.ipAddressTitle=Cím
+DarknetConnectionsToadlet.listenOnly=Nem kapcsolódott és csak figyel: Ezekhe a node-k hoz nem fog megpróbálni kapcsolódni, mert a felhasználó beállította a ListenOnly-t.
+DarknetConnectionsToadlet.listenOnlyShort=Csak figyel
+DarknetConnectionsToadlet.listening=Nem kapcsolódott, de figyel: this node won't try to connect to these peers very often because the user has set BurstOnly on it.
 DarknetConnectionsToadlet.listeningShort=Listening
 DarknetConnectionsToadlet.locationTitle=Location
 DarknetConnectionsToadlet.myFriends=My Friends (trusted peers added by me)
